<resources>
    <!--The string used in game god-->
    <string name="app_name">Find Player</string>
    <string name="game_god_fragment">This is the game god fragment</string>
    <string name="explore_fragment">This is the explore fragment</string>
    <string name="message_fragment">This is the message fragment</string>
    <string name="mine_fragment">This is the mine fragment</string>
    <string name="date_god_fragment">This is the data god fragment</string>
    <string name="game_god">游神</string>
    <string name="explore">探索</string>
    <string name="message">信息</string>
    <string name="mine">我的</string>
    <string name="tab_synthesis">综合</string>
    <string name="tab_hot">热门</string>
    <string name="tab_freshman">新手</string>
    <string name="date_god">约神</string>
    <string name="search">请输入文字……</string>
    <string name="location">未定位</string>
    <!--The string used in Data god-->
    <string name="dg_title_date">我要约玩</string>
    <string name="dg_opt_game">游戏类别</string>
    <string name="dg_opt_sex">游神性别</string>
    <string name="dg_opt_start">开始时间</string>
    <string name="dg_opt_time">陪玩时长</string>
    <string name="dg_opt_place">陪玩地点</string>
    <string name="dg_opt_price">陪玩单价</string>
    <string name="dg_btn_find">"              "发布邀约"              "</string>
    <!--The string used in Mine-->
    <string name="me_title">我的</string>
    <!-- The String used in login,registe,set_pwd,forget_pw -->
    <string name="reg_title">注册</string>
    <string name="setpwd_title">设置密码</string>
    <string name="fpwd_title">找回密码</string>

    <string name="login_title">登录</string>
    <string name="registe_title">注册</string>
    <string name="forget_title">找回密码</string>
    <string name="account">账号</string>
    <string name="pwd">密码</string>
    <string name="identify_code">验证码</string>
    <string name="type_account">请输入注册手机号</string>
    <string name="type_pwd">请输入密码</string>
    <string name="type_identify_code">请输入验证码</string>
    <string name="confirm">确定</string>
    <string name="registe">注册</string>
    <string name="forget_pwd">忘记密码?</string>
    <string name="agree_state">我已阅读同意《"找玩家"用户协议》</string>
    <string name="nextStep">下一步</string>
    <string name="accomplish">完成</string>
    <string name="left_text">设置密码</string>
    <string name="forget_set_pwd">请输入新密码</string>
    <string name="test_show">这是一个叫做show的EditText</string>
    <string name="action_settings">Settings</string>
</resources>
