<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg" 
    android:orientation="vertical">
	
  <TextView 
       android:id="@+id/login_title"
       android:layout_width="wrap_content"
       android:layout_height="100dp"
       
       android:gravity="center"
       android:layout_gravity="center"
       android:text="@string/app_name"
       android:textColor="#000"
       android:textSize="20sp"/>

    <RelativeLayout
        android:id="@+id/forget_pw_pwInput"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="@drawable/setbar_bg"
        android:clickable="true"
        android:gravity="center_vertical"
        android:layout_gravity="center">
        
        <EditText 
            android:id="@+id/forget_pw_pwdEdit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:hint="@string/forget_set_pwd"
            
            android:textSize="15sp"/>
    </RelativeLayout>

    <Button
        android:id="@+id/forget_pw_finishBtn"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="15dp"
        android:layout_gravity="center"
        android:text="@string/confirm"
        android:background="@color/fcl"
        android:textColor="#000" />

</LinearLayout>