<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@color/colorBottomBar">
    <LinearLayout
        android:id="@+id/tab_game_god"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/iv_game_god"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/game_god_on"/>
        <TextView
            android:id="@+id/tv_game_god"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/game_god"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/tab_explore"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/iv_explore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/explore"/>
        <TextView
            android:id="@+id/it_explore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/explore"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/tab_message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/iv_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/message"/>
        <TextView
            android:id="@+id/it_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/message"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/tab_mine"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/iv_mine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/mine"/>
        <TextView
            android:id="@+id/it_mine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mine"/>
    </LinearLayout>
</LinearLayout>
